---------------------------------------------------------------------------------------------------
11/28/2023 - 4.2.17 Merry Christmas !
---------------------------------------------------------------------------------------------------
11/20/2023 - 4.2.16 Happy Thanksgiving !
bug found in previous versions that removed resources in main spawn if not playing with Space Block.
This bug removed all main resources.
Space Block changes:
- Added 2 labs to chests to remove some initial grind.
- Added another Q&A regarding Fog of War.
- 
---------------------------------------------------------------------------------------------------
10/31/2023 - 4.2.15 Happy Halloween !
- Some changes to Space Block. Easy Start and Normal start are identical in the items they provide. 
  The difference, is Easy Start has a layout to teach the player how to play Space Port. The ONLY
  advantage is that if the host chooses not to provide a boiler/steam engine setup, EasyStart turns 
  that on.
- Larger Info screen, shown at start and in top left info screen. This answers the most asked 
  questions.
- 3 tiles wider to support the broader setup. I stretched the substation to it's proper distance
  covering more area, added more capacitors, it looks like 2.5MW and 100 MJ storage. 
---------------------------------------------------------------------------------------------------
10/26/2023 - 4.2.14
- Added more text on ground. Some in both easy/normal modes, more in easy mode.
- You can always choose one mode - look at box contents, and restart - flipping back and forth to decide which mode you want.
- Turned off constant reporting of missile launch of OTHER forces, each force that launch's will see the message that they launched - but nothing other than first launch of other teams.
---------------------------------------------------------------------------------------------------
10/24/2023 - 4.2.13
- Fix bug that crashes with:  