@@ -1,5 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 11/28/2023 - 4.2.17 Merry Christmas !
+Changes made to support Freight Forward
 ---------------------------------------------------------------------------------------------------
 11/20/2023 - 4.2.16 Happy Thanksgiving !
 bug found in previous versions that removed resources in main spawn if not playing with Space Block.
